<resources>
    <!--  preference start -->
    <string name="pref_key_item_click_action">pref_key_item_click_action</string>
    <string name="pref_key_second_button_click_action">pref_key_second_button_click_action</string>
    <string name="pref_key_about_open_source">pref_key_about_open_source</string>
    <string name="pref_key_app_description">pref_key_app_description</string>
    <string name="pref_key_clear_cookie">pref_key_clear_cookie</string>
    <string name="pref_key_additional_action_btn">pref_key_additional_action_btn</string>
    <string name="pref_key_show_anchor_image_when_mobile_data">pref_key_show_image_when_mobile_data</string>
    <string name="pref_key_anchor_item_click_action">pref_key_anchor_item_click_action</string>
    <string name="pref_key_show_anchor_image">pref_key_show_anchor_image</string>
    <string name="pref_key_cookie_mode_platform_displayable">pref_key_cookie_mode_platform_showable</string>
    <string name="pref_key_group_mode_use_cookie">pref_key_group_mode_use_cookie</string>


    <string name="open_app">打开app</string>
    <string name="inner_player">内置播放器</string>
    <string name="outer_player">外置播放器</string>
    <string name="overlay_player">悬浮窗播放</string>

    <array name="pref_click_action_entries">
        <item>@string/open_app</item>
        <item>@string/inner_player</item>
        <item>@string/outer_player</item>
        <item>@string/overlay_player</item>
    </array>

    <array name="pref_click_action_entry_values">
        <item name="value_open_app">@string/string_open_app</item>
        <item name="value_inner_player">@string/string_inner_player</item>
        <item name="value_outer_player">@string/string_outer_player</item>
        <item name="value_overlay_player">@string/string_overlay_player</item>
    </array>
    <string name="string_overlay_player">overlay_player</string>
    <string name="string_open_app">open_app</string>
    <string name="string_outer_player">outer_player</string>
    <string name="string_inner_player">inner_player</string>


    <string name="string_first_time_launch">first_time_launch</string>
    <string name="string_preference_initialed">preference_initialed</string>
    <!--  preference end -->

    <string name="app_name">直播啦</string>
    <string name="title_activity_setting">设置</string>
    <string name="main_page_add_anchor">新增/搜索</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="setting">设置</string>
    <string name="second_button">第二按钮</string>
    <string name="item_click_action_name">点击条目时</string>
    <string name="second_button_action_name">点击侧边键时</string>
    <string name="open_source_modules">开源组件</string>
    <string name="app_description">软件描述</string>
    <string name="app_description_summary">by acel，此项目已经开源。本软件仅供学习交流，严禁用于任何商业用途，否则对各直播平台构成侵权，后果自负。</string>
    <string name="login_first">请先登录</string>
    <string name="please_login">请登录帐号，登录成功后会自动关闭页面。</string>
    <string name="clear_all_cookie">清除所有登录信息</string>
    <string name="add_to_group_mode">添加到主页</string>
    <string name="live_image">直播图片</string>
    <string name="avatar">头像</string>
    <string name="anchor_already_exist">该主播已在列表中</string>
    <string name="add_anchor_success">添加成功</string>
    <string name="open_source_module">开源组件</string>
    <string name="lol_match_html"><![CDATA[<html><h1>本周英雄联盟赛程</h1>%s</html>]]></string>
    <string name="additional_action">附加功能</string>
    <string name="list_overlay">列表悬浮窗</string>
    <string name="button_list_overlay_close">列表悬浮窗关闭按钮</string>
    <string name="button_list_overlay_movable">列表悬浮窗可移动按钮</string>
    <string name="button_player_overlay_close">悬浮窗播放器关闭</string>
    <string name="button_player_overlay_resize">改变大小</string>
    <string name="is_living">直播中</string>
    <string name="not_living">未直播</string>
    <string name="additional_action_hint">附加功能按钮（LPL赛程等..）</string>
    <string name="cookie_mode_platform_showable">显示的平台</string>
    <string name="did_not_find_app">好像没有找到%sapp</string>
    <string name="get_streaming_failed">获取直播流失败。</string>
    <string name="streaming_url_is_null">直播流为空。</string>
    <string name="show_anchor_image_when_mobile_data">数据流量时显示图片</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="clear_platform_cookie_alert">要清除%s的登录信息吗？</string>
    <string name="clear_all_cookie_alert">要清除所有登录信息吗？</string>
    <string name="clear_all_cookie_ok">清除所有登录信息成功</string>
    <string name="platform_display">显示</string>
    <string name="anchor_item_click_action">点击</string>
    <string name="other">其他</string>
    <string name="search">搜索</string>
    <string name="anchor_id_or_search_keyword">直播间号或搜索关键词</string>
    <string name="add_anchor">添加直播间</string>
    <string name="start_app">打开app</string>
    <string name="player_overlay_progress">%d/%d</string>
    <string name="show_anchor_image">是否显示图片</string>
    <string name="group_mode_use_cookie">主页使用Cookie方式</string>
    <string name="group_mode_use_cookie_summary">推荐使用，功能更加完善。需要登录并且关注主播。</string>
    <string name="button_play_previous">播放上一个</string>
    <string name="button_play_next">播放下一个</string>
    <string name="button_replay">重新加载</string>
    <string name="play_failed">播放失败。</string>
    <string name="video_looping">录播</string>
    <string name="checked">checked</string>
    <string name="live_time_formatter">上次直播时间：%s</string>
    <string name="platform_icon">平台图标</string>>
    <string name="github_url">https://github.com/ac241/StreamLiveTool</string>
    <string name="room_id_format">房间号：%s</string>
    <string name="is_playing">播放中</string>
    <string name="docor_line">docor_line</string>
    <string name="set_cookie_manual">点击手动设置cookie</string>
    <string name="please_fill_cookie">请输入Cookie</string>>
    <string name="video_quality">清晰度</string>>
    <string name="no_video_quality_to_choose">没有清晰度信息</string>
    <string name="key_danmu_alpha">danmu_alpha</string>
    <string name="danmu_alpha">弹幕透明度</string>
    <string name="enable_night_mode">开启夜间模式</string>
    <string name="pref_key_enable_night_mode">pref_key_enable_night_mode</string>
    <string name="pref_key_night_mode_follow_system">pref_key_night_mode_follow_system</string>
    <string name="night_mode_follow_system">跟随系统</string>
    <string name="night_mode">夜间模式</string>
    <string name="basic_setting">基本设置</string>
    <string name="image">图片</string>
    <string name="app_message">软件信息</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_fill_anchor_name">请输入主播名</string>
    <string name="get_newest_anchor_data">获取最新数据</string>
    <string name="pref_key_huya_danmu_data">pref_key_huya_developer_data</string>
    <string name="huya_danmu_data">虎牙弹幕数据</string>
    <string name="key_huya_danmu_app_id">key_huya_danmu_app_id</string>
    <string name="key_huya_danmu_secret">key_huya_danmu_secret</string>
    <string name="huya_danmu_app_id_hint">开发者ID</string>
    <string name="huya_danmu_secret_hint">开发者密钥</string>
    <string name="how_to_get_huya_danmu_data">如何获取开发者数据？</string>
    <string name="save">保存</string>
    <string name="play_or_pause">播放或暂停</string>
    <string name="close">关闭</string>

</resources>
