<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/basic_setting">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_group_mode_use_cookie"
            android:summary="@string/group_mode_use_cookie_summary"
            android:title="@string/group_mode_use_cookie"
            app:iconSpaceReserved="false" />

        <MultiSelectListPreference
            android:defaultValue="@array/platform"
            android:entries="@array/platformName"
            android:entryValues="@array/platform"
            android:key="@string/pref_key_cookie_mode_platform_displayable"
            android:title="@string/cookie_mode_platform_showable"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="@string/string_inner_player"
            android:entries="@array/pref_click_action_entries"
            android:entryValues="@array/pref_click_action_entry_values"
            android:key="@string/pref_key_item_click_action"
            android:title="@string/item_click_action_name"
            app:iconSpaceReserved="false" />
        <ListPreference
            android:defaultValue="@string/string_overlay_player"
            android:entries="@array/pref_click_action_entries"
            android:entryValues="@array/pref_click_action_entry_values"
            android:key="@string/pref_key_second_button_click_action"
            android:title="@string/second_button_action_name"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/pref_key_huya_danmu_data"
            android:title="@string/huya_danmu_data"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/image">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_show_anchor_image"
            android:title="@string/show_anchor_image"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/pref_key_show_anchor_image"
            android:key="@string/pref_key_show_anchor_image_when_mobile_data"
            android:title="@string/show_anchor_image_when_mobile_data"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/night_mode">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_enable_night_mode"
            android:title="@string/enable_night_mode"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/pref_key_enable_night_mode"
            android:key="@string/pref_key_night_mode_follow_system"
            android:title="@string/night_mode_follow_system"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/other">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_additional_action_btn"
            android:title="@string/additional_action_hint"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="@string/pref_key_clear_cookie"
            android:title="@string/clear_all_cookie"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/app_message">
        <Preference
            android:key="@string/pref_key_about_open_source"
            android:title="@string/open_source_modules"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="@string/pref_key_app_description"
            android:summary="@string/app_description_summary"
            android:title="@string/app_description"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>