<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/btn_replay"
        style="@style/player_overlay_button"
        android:layout_gravity="start|bottom"
        android:layout_margin="20dp"
        android:contentDescription="@string/button_replay"
        android:src="@drawable/ic_baseline_replay_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_zoom"
        style="@style/player_overlay_button"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:contentDescription="@string/button_player_overlay_resize"
        android:src="@drawable/ic_flip_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/controller_title"
        style="@style/round_black_background_alpha06_white_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/controller_avatar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/avatar"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@id/controller_title"
        app:layout_constraintTop_toBottomOf="@id/controller_title"
        app:riv_corner_radius="30dip"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/controller_nickname"
        style="@style/round_black_background_alpha06_white_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@id/controller_avatar"
        app:layout_constraintStart_toEndOf="@id/controller_avatar"
        app:layout_constraintTop_toTopOf="@id/controller_avatar" />

    <TextView
        android:id="@+id/current_quality"
        style="@style/round_black_background_alpha06_white_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/video_quality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/controller_setting"
        style="@style/player_overlay_button"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/setting"
        app:layout_constraintBottom_toBottomOf="@+id/current_quality"
        app:layout_constraintEnd_toStartOf="@+id/current_quality"
        app:layout_constraintTop_toTopOf="@+id/current_quality"
        app:srcCompat="@drawable/exo_ic_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>