<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/grey_background"
    android:padding="2dp">

    <com.acel.streamlivetool.ui.main.player.RotatingImageView
        android:id="@+id/is_playing"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/is_playing"
        android:src="@drawable/ic_playing"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/avatar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/avatar"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/is_playing"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="1"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/platform_icon"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/platform_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:contentDescription="@string/platform_icon"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar" />
</androidx.constraintlayout.widget.ConstraintLayout>