<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controllerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55000000"
    app:layout_constraintEnd_toStartOf="@+id/overlay_controller_title"
    app:layout_constraintStart_toStartOf="@+id/overlay_controller_title">

    <TextView
        android:id="@+id/overlay_controller_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:background="@android:color/black"
        android:paddingHorizontal="10dp"
        android:paddingVertical="2dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/overlay_controller_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:alpha="0.6"
        android:background="@android:color/black"
        android:paddingHorizontal="10dp"
        android:paddingVertical="2dp"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/overlay_controller_title"
        app:layout_constraintTop_toBottomOf="@id/overlay_controller_title" />

    <TextView
        android:id="@+id/controller_list_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:alpha="0.6"
        android:background="@android:color/black"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_close"
        style="@style/player_overlay_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="end|top"
        android:contentDescription="@string/button_player_overlay_close"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_resize"
        style="@style/player_overlay_button"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/button_player_overlay_resize"
        android:src="@drawable/ic_baseline_crop_free_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btn_replay"
        style="@style/player_overlay_button"
        android:layout_gravity="start|bottom"
        android:contentDescription="@string/button_replay"
        android:src="@drawable/ic_baseline_replay_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_previous"
        style="@style/player_overlay_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/button_play_previous"
        android:src="@drawable/ic_controller_previous_enable"
        app:layout_constraintBottom_toBottomOf="@+id/btn_replay"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/anchor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:alpha="0.6"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_previous"
        app:layout_constraintStart_toStartOf="@+id/btn_previous"
        app:layout_constraintTop_toBottomOf="@+id/btn_previous"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/btn_next"
        style="@style/player_overlay_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/button_play_next"
        android:src="@drawable/ic_controller_next_enable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/next_anchor_name"
        tools:ignore="SmallSp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:alpha="0.6"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="@+id/btn_next"
        app:layout_constraintTop_toBottomOf="@+id/btn_next" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/previous_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="anchor_name,btn_previous" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/next_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_next,next_anchor_name" />

    <ImageView
        android:id="@+id/btn_start_app"
        android:visibility="gone"
        style="@style/player_overlay_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="end|center_vertical"
        android:contentDescription="@string/start_app"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_call_missed_outgoing_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>